{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 310,
  "lineage": "5780dd53-0117-68df-d58d-12a4af2d3ea4",
  "resources": [
    {
      "module": "module.core_network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_from_your_ip_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:603118547300:security-group/sg-02bc2a2c9f30d021f",
            "description": "Allow SSH (Port 22) from your specific public IP address.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bc2a2c9f30d021f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from your local machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SOCLab-SSH-From-Your-IP-SG",
            "name_prefix": "",
            "owner_id": "603118547300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SOCLab-SSH-Your-IP-SG"
            },
            "tags_all": {
              "Name": "SOCLab-SSH-Your-IP-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-066bdc0580c65f205"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.core_network.aws_vpc.soc_lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.core_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "red_team_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:603118547300:subnet/subnet-049077066bb5df6ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049077066bb5df6ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "603118547300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SOCLab-RedTeam-Private-Subnet"
            },
            "tags_all": {
              "Name": "SOCLab-RedTeam-Private-Subnet"
            },
            "vpc_id": "vpc-066bdc0580c65f205"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.core_network.aws_vpc.soc_lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.core_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "soc_lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:603118547300:vpc/vpc-066bdc0580c65f205",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af8bbf78773285d2",
            "default_route_table_id": "rtb-013e8b2d87e401f6f",
            "default_security_group_id": "sg-06a28c2b2c9f985a7",
            "dhcp_options_id": "dopt-0286daf7fcaedf9ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066bdc0580c65f205",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013e8b2d87e401f6f",
            "owner_id": "603118547300",
            "tags": {
              "Name": "SOCLab-VPC",
              "Project": "SOCLab"
            },
            "tags_all": {
              "Name": "SOCLab-VPC",
              "Project": "SOCLab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.red_team",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kali_linux_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052793c032018fa8a",
            "arn": "arn:aws:ec2:ap-south-1:603118547300:instance/i-0f5df7133d3773abb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5df7133d3773abb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "soc-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3ffd6e7b12b2b5b",
            "private_dns": "ip-10-0-2-100.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 120,
                "kms_key_id": "arn:aws:kms:ap-south-1:603118547300:key/6e05eefe-2fda-4816-921d-844dcb3a181e",
                "throughput": 0,
                "volume_id": "vol-070eeb30a5ef7e11b",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049077066bb5df6ce",
            "tags": {
              "Name": "SOCLab-KaliLinux-VM",
              "Project": "SOCLab",
              "Role": "RedTeam"
            },
            "tags_all": {
              "Name": "SOCLab-KaliLinux-VM",
              "Project": "SOCLab",
              "Role": "RedTeam"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bc2a2c9f30d021f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.core_network.aws_security_group.ssh_from_your_ip_sg",
            "module.core_network.aws_subnet.red_team_private_subnet",
            "module.core_network.aws_vpc.soc_lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.red_team",
      "mode": "managed",
      "type": "aws_instance",
      "name": "red_team_docker_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021a584b49225376d",
            "arn": "arn:aws:ec2:ap-south-1:603118547300:instance/i-0eb2ce7e777c19dd6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb2ce7e777c19dd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "soc-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2587f01c47e230f",
            "private_dns": "ip-10-0-2-192.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:603118547300:key/6e05eefe-2fda-4816-921d-844dcb3a181e",
                "throughput": 0,
                "volume_id": "vol-06ee77966d8d1b104",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049077066bb5df6ce",
            "tags": {
              "Name": "SOCLab-RedTeam-DockerHost",
              "Project": "SOCLab",
              "Role": "RedTeam-Apps"
            },
            "tags_all": {
              "Name": "SOCLab-RedTeam-DockerHost",
              "Project": "SOCLab",
              "Role": "RedTeam-Apps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bc2a2c9f30d021f",
              "sg-0943ed1e90b7e1c59"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.core_network.aws_security_group.ssh_from_your_ip_sg",
            "module.core_network.aws_subnet.red_team_private_subnet",
            "module.core_network.aws_vpc.soc_lab_vpc",
            "module.red_team.aws_security_group.caldera_app_sg"
          ]
        }
      ]
    },
    {
      "module": "module.red_team",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "caldera_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:603118547300:security-group/sg-0943ed1e90b7e1c59",
            "description": "Allow access to CALDERA UI and agent communication.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0943ed1e90b7e1c59",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "0.0.0.0/0"
                ],
                "description": "CALDERA UI \u0026 Agent",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8889
              }
            ],
            "name": "SOCLab-CALDERA-App-SG",
            "name_prefix": "",
            "owner_id": "603118547300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SOCLab-CALDERA-App-SG"
            },
            "tags_all": {
              "Name": "SOCLab-CALDERA-App-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-066bdc0580c65f205"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.core_network.aws_subnet.red_team_private_subnet",
            "module.core_network.aws_vpc.soc_lab_vpc"
          ]
        }
      ]
    }
  ]
}